[gd_scene load_steps=10 format=2]

[ext_resource path="res://characters/enemy_ooze/l0_sprite_Ooze4.png" type="Texture" id=1]
[ext_resource path="res://characters/enemy_ooze/l0_sprite_Ooze3.png" type="Texture" id=2]
[ext_resource path="res://characters/enemy_ooze/l0_sprite_Ooze1.png" type="Texture" id=3]
[ext_resource path="res://characters/enemy_ooze/l0_sprite_Ooze2.png" type="Texture" id=4]
[ext_resource path="res://characters/enemy_ooze/enemy_ooze.gd" type="Script" id=5]
[ext_resource path="res://characters/enemy_ooze/body.gd" type="Script" id=6]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 4 ), ExtResource( 2 ), ExtResource( 1 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 32.0

[sub_resource type="CircleShape2D" id=3]
radius = 19.6911

[node name="enemy_ooze" type="KinematicBody2D" groups=[
"enemy",
]]
script = ExtResource( 5 )
__meta__ = {
"_edit_group_": true
}

[node name="sprite" type="AnimatedSprite" parent="."]
position = Vector2( 0.0868912, -3.65016e-14 )
rotation = -1.5708
scale = Vector2( 0.7, 0.7 )
frames = SubResource( 1 )
animation = "idle"
frame = 1
speed_scale = 2.0
playing = true

[node name="collision" type="CollisionShape2D" parent="."]
position = Vector2( -57.145, 0 )
scale = Vector2( 0.7, 0.7 )
shape = SubResource( 2 )
disabled = true

[node name="body" type="RigidBody2D" parent="." groups=[
"enemy",
]]
position = Vector2( -0.736107, -3.8147e-06 )
collision_mask = 3
mode = 3
mass = 65535.0
gravity_scale = 0.0
contacts_reported = 1
contact_monitor = true
script = ExtResource( 6 )
__meta__ = {
"_edit_group_": true
}

[node name="body_collision" type="CollisionShape2D" parent="body"]
position = Vector2( 7.68179, 0 )
shape = SubResource( 3 )

[node name="bullet_pos_ooze_1" type="Node2D" parent="."]
position = Vector2( -17.0494, 0 )
[connection signal="body_entered" from="body" to="." method="_on_body_body_entered"]
